--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ docs/
 
 # Dotenv file
 .env
+
+# VSC
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
