--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ libs = ["lib"]
 
 solc_version = '0.8.26'
 evm_version = "cancun"
-optimizer_runs = 800
+optimizer = true
+optimizer_runs = 2000
 via_ir = true
 ffi = true
