--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,4 @@ docs/
 
 # VSC
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/settings.json
